--- a/gatsby-starter-hello-world/package.json
+++ b/gatsby-starter-hello-world/package.json
@@ -15,8 +15,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.21.37",
+    "gatsby-image": "^2.4.5",
+    "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-styled-components": "^3.3.2",
+    "gatsby-source-contentful": "^2.3.12",
+    "gatsby-source-filesystem": "^2.3.7",
+    "gatsby-transformer-sharp": "^2.5.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.1.0"
